--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           # will put all file under this path
           local_path: ./* # default is ./*
           # files will copy to under remote_path
-          remote_path: /var/www/www/
+          remote_path: /home/alex/Flasken-appen/
           
           # sftp args
           args: '-o ConnectTimeout=5'
